--- a/css/style.css
+++ b/css/style.css
@@ -247,8 +247,29 @@ body {
 }
  
 .work-item {
+    position: relative;
     margin-left: 30px;
+}
 
+
+.examples-of-work {
+    position: absolute;
+    width: 370px;
+    bottom: 0px;
+    left: 0px;
+   
+    background: rgba(47, 48, 58, 0.8);
+
+}
+
+.text-on-image {
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 1.14;
+    text-transform: uppercase;
+    color: var(--secondary-text-color);
+    text-align: center;
+    padding: 27px 0 27px 0;
 }
 
 /*Наша команда*/
@@ -458,12 +479,9 @@ body {
 }
 
 .social-link-title {
-    font-family: Roboto;
-    font-style: normal;
     font-weight: bold;
     font-size: 14px;
     line-height: 16px;
-    letter-spacing: 0.03em;
     text-transform: uppercase;
     margin-bottom: 20px;
 
