--- a/css/style.css
+++ b/css/style.css
@@ -83,7 +83,20 @@ body {
 }
 
 .current {
+    position: relative;
     color: var(--accent-color);
+}
+
+.current::after {
+    content: "";
+    position: absolute;
+    margin-top: 36px;
+
+    display: flex;
+    width: 100%;
+    height: 4px;
+    background: var(--accent-color);
+    border-radius: 2px;
 }
 
 .contact {
