--- a/css/style.css
+++ b/css/style.css
@@ -138,13 +138,11 @@ body {
     fill: var(--accent-color);
 }
 
-
 /*Шапка сайта*/
 
 .hero {
-    height: 600px;
+   height: 600px;
     max-width: 1600px;
-    
     background-image: linear-gradient(
         to right,
         rgba(47, 48, 58, 0.4),
@@ -153,7 +151,6 @@ body {
         url(../images/bg-hero.jpg);
     background-size: cover;
     background-position: center;
-    background-repeat: no-repeat;
     
     background-color: #2F303A;
 }
@@ -608,6 +605,22 @@ body {
 .item-link:hover,
 .item-link:focus {
     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+}
+
+.card-thumb {
+    position: relative;
+}
+
+.card-thumb::after {
+    display: inline-block;
+    content: "";
+    position: absolute;
+    bottom: 0px;
+    left: 0px;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(33, 150, 243, 0.9);
+   /* opacity: 0;*/
 }
 
 .card-link {
