--- a/css/style.css
+++ b/css/style.css
@@ -607,20 +607,38 @@ body {
     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
-.card-thumb {
+.card-animation-block {
     position: relative;
+    overflow: hidden;
 }
 
-.card-thumb::after {
-    display: inline-block;
-    content: "";
+.card-animation {
+    display: flex;
+    align-items: center;
+    padding-left: 24px;
+    padding-right: 24px;
+   
     position: absolute;
-    bottom: 0px;
-    left: 0px;
-    width: 100%;
+    top: 0px;
     height: 100%;
     background-color: rgba(33, 150, 243, 0.9);
-   /* opacity: 0;*/
+
+    transform: translateY(100%);
+    transition-property: transform;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.item-link:hover .card-animation,
+.item-link:focus .card-animation {
+    transform: translateY(0);
+
+}
+
+.card-animation-text {
+    font-size: 18px;
+    line-height: 1.55;
+    color: var(--secondary-text-color);
 }
 
 .card-link {
