--- a/css/style.css
+++ b/css/style.css
@@ -149,7 +149,8 @@ body {
         rgba(47, 48, 58, 0.4)
         ),
         url(../images/bg-hero.jpg);
-    background-size: cover;    
+    background-size: cover;  
+    background-position: center;  
     background-color: #2F303A;
 }
 
@@ -200,6 +201,7 @@ body {
     position: fixed;
     top: 0;
     left: 0;
+    z-index: 2;
     width: 100%;
     height: 100%;
     background-color: rgba(0, 0, 0, 0.2);
@@ -215,16 +217,40 @@ body {
 }
 
 .modal {
-    position: absolute;
+    position: relative;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%);
+    z-index: 3;
+    transform: scale(1) translate(-50%, -50%);
 
     width: 528px;
     height: 581px;
-    background: #FFFFFF;
+    background: var(--secondary-text-color);
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 4px;
+}
+
+.close-button {
+    position: absolute;
+    top: 8px;
+    right: 8px;
+    height: 30px;
+    width: 30px;
+    background: var(--secondary-text-color);
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    border-radius: 50%;
+    cursor: pointer;
+}
+
+.close-button:hover,
+.close-button:focus {
+    fill: var(--accent-color);
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.close-button-icon {
+    width: 100%;
+    height: 100%;
 }
 
 /*Особенности*/
