--- a/css/style.css
+++ b/css/style.css
@@ -90,7 +90,7 @@ body {
 .current::after {
     content: "";
     position: absolute;
-    margin-top: 36px;
+    margin-top: 36.5px;
 
     display: flex;
     width: 100%;
@@ -205,8 +205,6 @@ body {
     width: 100%;
     height: 100%;
     background-color: rgba(0, 0, 0, 0.2);
-    opacity: 1;
-    visibility: visible;
     transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -221,7 +219,7 @@ body {
     top: 50%;
     left: 50%;
     z-index: 3;
-    transform: scale(1) translate(-50%, -50%);
+    transform: translate(-50%, -50%);
 
     width: 528px;
     height: 581px;
@@ -401,7 +399,7 @@ body {
     border-radius: 50%;
     color: #AFB1B8;
 
-    transition-property: color;
+    transition-property: color, background-color;
     transition-duration: 250ms;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -441,9 +439,9 @@ body {
     height: 100%;
     border: 1px solid #afb1b8;
     border-radius: 4px;
-    fill: #afb1b8;
+    color: #afb1b8;
 
-    transition-property: border-color, color;
+    transition-property: color, border-color;
     transition-duration: 250ms;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 
