--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,8 @@
     --secondary-text-color: #FFFFFF;
     --grey-bg-color: #2F303A;
     --white-bg-color: #E5E5E5;
+    --transition-duration: 2500ms;
+    --animation-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 body {
@@ -49,8 +51,8 @@ body {
     text-decoration: none;
 
     transition-property: color;
-    transition-duration: 250ms;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    transition-duration: var(--transition-duration);
+    transition-timing-function: var(--animation-timing-function);
 }
 
 .link:focus,
@@ -188,8 +190,8 @@ body {
     border-radius: 4px;
 
     transition-property: color;
-    transition-duration: 250ms;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    transition-duration: var(--transition-duration);
+    transition-timing-function: var(--animation-timing-function);
 }
 
 .button:hover,
@@ -205,7 +207,9 @@ body {
     width: 100%;
     height: 100%;
     background-color: rgba(0, 0, 0, 0.2);
-    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: opacity, visibility;
+    transition-duration: var(--transition-duration);
+    transition-timing-function: var(--animation-timing-function);
 }
 
 .backdrop.is-hidden {
@@ -400,8 +404,8 @@ body {
     color: #AFB1B8;
 
     transition-property: color, background-color;
-    transition-duration: 250ms;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    transition-duration: var(--transition-duration);
+    transition-timing-function: var(--animation-timing-function);
 }
 
 .social-list-item-link:hover,
@@ -442,8 +446,8 @@ body {
     color: #afb1b8;
 
     transition-property: color, border-color;
-    transition-duration: 250ms;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    transition-duration: var(--transition-duration);
+    transition-timing-function: var(--animation-timing-function);
 
 }
 
@@ -457,14 +461,14 @@ body {
     width: 106px;
     height: 60px;
 
-    transition-property: fill;
-    transition-duration: 250ms;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    transition-property: color;
+    transition-duration: var(--transition-duration);
+    transition-timing-function: var(--animation-timing-function);
 }
 
 .clients-link:hover .clients-icon,
 .contact-link:focus .clients-icon {
-    fill: var(--accent-color);
+    color: var(--accent-color);
 }
 
 /*Футер*/
@@ -511,8 +515,8 @@ body {
     text-decoration: none;
 
     transition-property: color;
-    transition-duration: 250ms;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    transition-duration: var(--transition-duration);
+    transition-timing-function: var(--animation-timing-function);
 }
 
 .adress-link:focus,
@@ -525,8 +529,8 @@ body {
     text-decoration: none;
 
     transition-property: color;
-    transition-duration: 250ms;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    transition-duration: var(--transition-duration);
+    transition-timing-function: var(--animation-timing-function);
 }
  
 .contact-link:hover,
@@ -574,8 +578,8 @@ body {
     background-color: rgba(255, 255, 255, 0.1);
 
     transition-property: background-color;
-    transition-duration: 250ms;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    transition-duration: var(--transition-duration);
+    transition-timing-function: var(--animation-timing-function);
 }
 
 .footer-social-list-link:hover,
@@ -611,8 +615,8 @@ body {
     padding: 6px 22px;
 
     transition-property: color, background-color, box-shadow;
-    transition-duration: 250ms;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    transition-duration: var(--transition-duration);
+    transition-timing-function: var(--animation-timing-function);
 
 }
 
@@ -651,8 +655,8 @@ body {
     color: var(--primary-text-color);
 
     transition-property: box-shadow;
-    transition-duration: 250ms;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    transition-duration: var(--transition-duration);
+    transition-timing-function: var(--animation-timing-function);
 }
 
 .item-link:hover,
@@ -678,8 +682,8 @@ body {
 
     transform: translateY(100%);
     transition-property: transform;
-    transition-duration: 250ms;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    transition-duration: var(--transition-duration);
+    transition-timing-function: var(--animation-timing-function);
 }
 
 .item-link:hover .card-animation,
