--- a/css/style.css
+++ b/css/style.css
@@ -143,8 +143,13 @@ body {
 /*Шапка сайта*/
 
 .hero {
-   height: 600px;
-    min-width: 1600px;
+    min-height: 600px;
+    max-width: 1600px;
+    padding-top: 200px;
+    padding-bottom: 200px;
+    margin-left: auto;
+    margin-right: auto;
+
     background-image: linear-gradient(
         to right,
         rgba(47, 48, 58, 0.4),
@@ -160,8 +165,6 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding-top: 200px;
-    padding-bottom: 200px;
 }
 
 .hero-title {
@@ -177,6 +180,10 @@ body {
 }
 
 .button {
+    min-width: 200px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+
     font-weight: 700;
     font-size: 16px;
     line-height: 1.88;
@@ -184,8 +191,6 @@ body {
     color: var(--secondary-text-color);
     background-color: var(--accent-color);
     cursor: pointer;
-    min-width: 200px;
-    height: 50px;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
     border-radius: 4px;
 
@@ -276,7 +281,6 @@ body {
 
 .feature-item-color {
     background-color: #F5F4FA;
-    height: 120px;
     text-align: center;
     padding-top: 25px;
     padding-bottom: 25px;
@@ -321,7 +325,7 @@ body {
 
 .examples-of-work {
     position: absolute;
-    width: 370px;
+    width: 100%;
     bottom: 0px;
     left: 0px;
    
@@ -426,11 +430,6 @@ body {
     display: flex;
 }
 
-.clients-item {
-    width: 170px;
-    height: 92px;
-}
-
 .clients-item:not(:last-child) {
     margin-right: 30px;
 }
@@ -441,6 +440,8 @@ body {
     align-items: center;
     width: 100%;
     height: 100%;
+    padding: 16px 32px 16px 32px;
+    
     border: 1px solid #afb1b8;
     border-radius: 4px;
     color: #afb1b8;
@@ -642,11 +643,11 @@ body {
 }
 
 .item:nth-child(3n+3){
-    margin-right: -30px;
+    margin-right: 0;
 }
 
 .item:nth-child(n+7){
-    margin-bottom: -30px;
+    margin-bottom: 0;
 }
 
 .item-link {
